--- a/style.css
+++ b/style.css
@@ -17,6 +17,29 @@ html{
 }
 
 
+
+/* ---------------------------------------------------------------------------------------------------Scrollbar Style--------------------------------------------------------------------------------------------------------- */
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track{
+    border-radius: 8px;
+    box-shadow: inset 0 0 11px rgb(116, 78, 78);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: rgb(129, 12, 12);
+    border-radius: 8px;
+
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(172, 10, 10);
+}
+
+
+
 /* ----------------------------------------------------------------------------------------Navigation Style--------------------------------------------------------------------------------------------------------- */
 .navbar{
     position: fixed;
@@ -86,6 +109,7 @@ html{
 }
 
 
+
 /* ----------------------------------------------------------------------------------------------Menu Button---------------------------------------------------------------------------------------------------------- */
 .menu-btn{
     color: whitesmoke;
@@ -109,7 +133,8 @@ html{
 }
 
 
-/* ----------------------------------------------------------------------------------------------------Scrollup Button----------------------------------------------------------------------------------------------- */
+
+/* ------------------------------------------------------------------------------------------------------Scrollup Button----------------------------------------------------------------------------------------------- */
 .scrollup-btn{
     position: fixed;
     height: 45px;
@@ -144,7 +169,7 @@ html{
 
 
 
-/* ---------------------------------------------------------------------------------------------------Home Section ------------------------------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------------------------------------------Home Section ------------------------------------------------------------------------------------------------- */
 .home{
     display: flex;
     background: url(images/Background.jpg) no-repeat center;
@@ -197,7 +222,7 @@ html{
 
 
 
-/* ---------------------------------------------------------------------------------------Similar Codes for all SECTIONS ------------------------------------------------------------------------------------------*/
+/* ---------------------------------------------------------------------------------------Similar Codes for all "sections" & font styles ------------------------------------------------------------------------------------------*/
 section{
     padding: 100px 0;
 }
@@ -241,7 +266,7 @@ section .title::after{
 }
 
 
-/* ---------------------------------------------------------------------------------------------------About Me Section ----------------------------------------------------------------------------------------------*/
+/* --------------------------------------------------------------------------------------------------About Me Section ----------------------------------------------------------------------------------------------*/
 .about .title span{
     color: rgb(129, 10, 10);
 }
@@ -273,9 +298,9 @@ section .title::after{
 }
 
 .about .about-content .right .text{
-    font-size: 30px;
-    font-weight: 450;
-    margin-bottom: 11px;
+    font-size: 32px;
+    font-weight: 500;
+    padding-bottom: 20px;
     text-align: center;
 }
 
@@ -284,10 +309,18 @@ section .title::after{
 }
 
 .about .about-content .right p{
-    color: #222 ;
+    color: rgb(59, 59, 59);
+    font-weight: 450;
+    font-size: 19.8px;
     text-align: justify;
-    font-size: 18.3px;
 }
+
+
+.about .about-content .right i:hover{
+    color: black;
+    transition: all 0.5s ease;
+}
+
 
 .about .about-content .column{
     width: 50%;
@@ -505,7 +538,7 @@ section .title::after{
 }
 
 
-/* ------------------------------------------------------------------------------------------------Award Section--------------------------------------------------------------------------------------------------- */
+/* ------------------------------------------------------------------------------------------------Awards Section--------------------------------------------------------------------------------------------------- */
 .award .title span{
     color: rgb(175, 15, 15);
 }
@@ -595,7 +628,9 @@ section .title::after{
 }
 
 
-/* Contact Section */
+
+
+/*-----------------------------------------------------------------------------------------------Contact Section-----------------------------------------------------------------------------------------------*/
 .contact .title::after{
     content: "Say Hi";
 }
@@ -662,95 +697,154 @@ section .title::after{
     color: #333;
 }
 
-.contact .right form .fields{
-    display: flex;
-}
-
-.contact .right form .field, .contact .right form .fields .field{
-    height: 45px;
+form {
+    max-width: 700px;
     width: 100%;
-    margin-bottom: 16px;
+    background: rgb(247, 240, 240);
+    margin: 4vh auto 0 auto;
+    padding: 60px;
+    border: 2px solid rgb(141, 4, 31);
+    border-radius: 8px;
+    box-sizing: border-box;
+    transition: all 0.5s ease;
 }
 
-.contact .right form .message{
-    height: 80px;
-    width: 100%;
+form:hover{
+    background: rgb(235, 212, 212);
+    transition: all 0.5s ease;
 }
 
-.contact .right form .name{
-    margin-right: 10px;
+h2 {
+    font-size: 30px;
+    margin: 0;
+    text-align: center;
 }
 
-.contact .right form .email{
-    margin-left: 10px;
+h2 span{
+    color: crimson;
 }
 
-.contact .right form .field input, .contact .right form .message textarea{
-    height: 100%;
-    width: 100%;
-    border: 1px solid rgb(153, 4, 4);
-    border-radius: 6px;
-    outline: none;
-    padding: 0 15px;
+label {
     font-size: 17px;
-    font-family: 'Poppins', sans-serif;
+    color: rgb(146, 7, 7);
+    font-weight: 610;
+    display: block;
+    margin: 16px 2px;
+    
 }
 
-.contact .right form .message textarea{
-    padding-top: 9px;
-    resize: none;
+::placeholder {
+    color: rgb(8, 8, 8);
+    opacity: 35%;
 }
 
-.contact .right form .button{
-    height: 45px;
-    width: 170px;
-}
-
-.contact .right form .button button{
+input, textarea {
     width: 100%;
-    height: 100%;
-    border: 3px solid rgb(235, 8, 53);
+    padding: 10px;
+    box-sizing: border-box;
+    outline: none;
+    resize: none;
+    border: none;
+    border-bottom: 2px solid rgb(85, 84, 84);
+}
+
+input[type="text"]:focus, textarea:focus {
+    border-bottom: 2px solid rgb(197, 18, 18);
+    transition: all 0.5s ease;
+}
+
+textarea::-webkit-scrollbar {
+    width: 5px;
+}
+
+textarea::-webkit-scrollbar-thumb {
+    background-color: rgb(148, 16, 16);
+}
+
+.submit-btn {
+    text-align: center;
+}
+
+input[type="submit"] {
+    font-weight: 500;
+    margin-top: 30px;
+    width: 100%;
+    max-width: 740px;
     background: darkred;
     color: whitesmoke;
     font-size: 20px;
-    font-weight: 500;
-    border-radius: 6px;
     cursor: pointer;
+    border-radius: 7px;
+    border: 3px solid crimson;
     transition: all 0.5s ease;
 }
 
-.contact .right form .button button:hover{
+input[type="submit"]:hover{
     color: crimson;
     background: black;
     transition: all 0.5s ease;
+    
+}
+.error {
+    padding-left: 4px;
+    font-size: 14px;
+    font-weight: 520;
+    color: rgb(194, 9, 9);
 }
 
-::placeholder{
-    color: rgb(110, 4, 4);
+.error-border {
+    border-bottom: 3px solid rgb(228, 10, 10);
 }
 
-/*----------------------------------------------------------- Footer Section -------------------------------------------------------------*/
+#success {
+    padding-top: 13px;
+    font-weight: 550;
+    font-size: 20px;
+    color: rgb(13, 202, 13);
+}
+
+/*-----------------------------------------------------------------------------------------------Footer Section ----------------------------------------------------------------------------------------------------*/
 footer{
     background: rgb(95, 8, 8);
     padding: 21px 35px;
     color: whitesmoke
 }
 
+footer i{
+    margin-left: 60%;
+    color: rgb(226, 226, 226);
+    font-size: 25px;  
+    transition: all 0.5s ease;  
+}
 
-/* .alert-success{
-    z-index: 0;
-    background: rgb(0, 100, 25);
-    font-size: 18px;
-    padding: 20px 40px;
-    min-width: 420px;
-    position: fixed;
-    align-items: center;
-    text-align: center;
-    bottom: 10px;
-    border-left: 8px solid rgb(0, 155, 21);
-    border-radius: 4px;
-}*/
+footer i:hover{
+    color: rgb(201, 159, 159);
+    transition: all 0.5s ease;
+}
 
+footer i2{
+    padding-left: 12px;
+    color: rgb(226, 226, 226);
+    font-size: 25px;  
+    transition: all 0.5s ease;  
+}
+
+footer i2:hover{
+    color: rgb(179, 145, 145);
+    transition: all 0.5s ease;
+}
+
+footer i3{
+    padding-left: 12px;
+    color: rgb(226, 226, 226);
+    font-size: 25px;  
+    transition: all 0.5s ease;  
+}
+
+footer i3:hover{
+    color: rgb(179, 145, 145);
+    transition: all 0.5s ease;
+}
 
 
 
